# certsGenerator

./: .coveragerc  .flake8  .gitignore  LICENCE  Pipfile  README.md  generate_certs.py  mypy.ini  setup.cfg
certsGenerator/: builder.py  certBuilder.py  certManager.py  conf.py  constructor.py  globals_conf.py  helpers.py  main.py  storage.py
data/: conf.json
example/: conf.json
examples/: mtls-postgres.json
helpers/: generate_passphrase.sh
root-ca/: root-ca.crt  root-ca.key
samples/: web-rustls.json
src/: certBuilder.py  certManager.py  conf.py  constructor.py  main.py
tests/: helpers.py  test1.json  test3.json  tests.py
tests/confs/: test1.json  test2.json  test3.json  test4.json  test5.json  test5_1.json  test5_2.json
