[metadata]
name = certs_generator
version = 0.1.0
description = Certs generator made it simple
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/t1m0t/certs_generator
project_urls =
    Code=https://github.com/t1m0t/certs_generator
    Issue tracker=https://github.com/t1m0t/certs_generator/issues
author = Timothée BARON
author_email = timothee.baron@protonmail.com
keywords = certs certificate x509 pyca cryptography crt
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Cryptography
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python :: 3.9
    Topic :: System :: Security
    Topic :: Software Development :: Libraries

[options]
packages = src
python_requires = >=3.6
tests_require =
    mypy==0.630
    black==18.9b0
    orjson==3.4.0
setup_requires = setuptools>=38.6.0

[options.packages.find]
exclude = *test*

[options.extras_require]
cryptography = cryptography==3.3.1