[metadata]
name = certsGenerator
version = 0.1.0
description = Certs generator made it simple
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/t1m0t/certsGenerator
project_urls =
    Code=https://github.com/t1m0t/certsGenerator
    Issue tracker=https://github.com/t1m0t/certsGenerator/issues
author = Timothée BARON
author_email = timothee.baron@protonmail.com
keywords = certs certificate x509 pyca cryptography crt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries

[options]
packages = find:
python_requires = >=3.8
tests_require =
    pytest
    pytest-cov
    codecov
    mypy==0.711
    black==20.8b1
    orjson==3.4.0
setup_requires = setuptools>=38.6.0

[options.packages.find]
include = *certsGenerator*
exclude = *test*

[options.extras_require]
cryptography = cryptography==3.3.1